# MakrCave-AI

./: .replit  dependencies.py  global.css  main.py  main_simple.py  next.config.js  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  start.py  tailwind.config.ts
.next/: app-build-manifest.json  react-loadable-manifest.json  trace
.next/cache/: config.json
.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware-manifest.json  middleware-react-loadable-manifest.js  middleware.js  server-reference-manifest.json  webpack-runtime.js
app/: layout.tsx  providers.tsx
backend/: API_README.md  app.py  database.py  dependencies.py  main.py  main_simple.py  requirements.txt  start.py
components/: EnhancedHeader.tsx  Header.tsx  Layout.tsx  RoleDashboard.tsx
contexts/: README.md
frontend/: package.json  vite.config.ts
lib/: auth.ts
middleware/: security.py
models/: billing.py  collaboration.py  enhanced_member.py  equipment.py  inventory.py  job_management.py  member.py  notifications.py  project.py
pages/: AuthCallback.tsx  Contact.tsx  LandingPage.tsx  Login.tsx  MakrVerse.tsx  NotFound.tsx  OnboardingPage.tsx  ProjectDetail.tsx  README.md
routes/: __init__.py  access_control.py  announcements.py  billing.py  bom_export.py  equipment.py  filament_tracking.py  inventory.py  makerspace_settings.py  membership_plans.py  notifications.py  providers.py
server/: routes.ts  storage.ts
services/: README.md  apiService.ts  billingApi.ts  healthCheckService.ts  real_analytics_service.py
shared/: schema.ts
(+201 files in other folders)
